--- a/package.json
+++ b/package.json
@@ -19,12 +19,30 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "ng-zorro-antd": "^9.3.0",
+    "prosemirror-collab": "^1.2.2",
+    "prosemirror-commands": "1.1.4",
+    "prosemirror-dropcursor": "1.3.2",
+    "prosemirror-example-setup": "^1.1.2",
+    "prosemirror-gapcursor": "1.1.5",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-inputrules": "1.1.2",
+    "prosemirror-keymap": "1.1.4",
+    "prosemirror-model": "1.10.0",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-schema-list": "^1.1.2",
+    "prosemirror-state": "1.3.3",
+    "prosemirror-tables": "^1.1.0",
+    "prosemirror-transform": "^1.2.6",
+    "prosemirror-utils": "^0.9.6",
+    "prosemirror-view": "1.15.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
@@ -39,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
